# file_to_html

./: Cargo.toml  README.md
assets/template/: html_template.html
src/: cli.rs  config.rs  convert.rs  file.rs  html.rs  html_template.html  interactive.rs  lib.rs  main.rs  utils.rs  zip.rs
src/action/: cli.rs  interactive.rs
src/config/: config.rs  ports.rs
src/facade/: conversion_facade.rs
src/facade/ports/: facade_ports.rs
src/facade/traits/: i_conversion.rs
src/models/: conversion.rs  file.rs  html.rs  zip.rs
src/service/: config_service.rs  file.rs  html.rs  zip.rs
src/service/traits/: i_service.rs
src/utils/: convert.rs  file.rs  html.rs  utils.rs  zip.rs
