[package]
name = "file_to_html"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
zip = { version = "2.6.1", features = ["aes-crypto"] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["password"] }
pathdiff = "0.2"
env_logger = "0.11"
indicatif = "0.17"
regex = "1.11.1"
log = "0.4.27"
