[package]
name = "file_to_html"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
env_logger = "0.11"
indicatif = "0.17"
log = "0.4"
pathdiff = "0.2"
rand = "0.8"
regex = "1.10"
zip = { version = "2.2", features = ["aes-crypto"] }
chrono = "0.4" # 新增依賴，用於時間戳密碼